2006-07-17  Stefan Seefeld  <stefan@codesourcery.com>

	* qm/test/cmdline.py: Allow 'qmtest create' to create explicit suites,
	and make their content visible through 'qmtest ls'.


2006-06-21  Stefan Seefeld  <stefan@codesourcery.com>

	* qm/test/report.py: Add support for '-' special output file.

2006-06-09  Stefan Seefeld  <stefan@codesourcery.com>

	* qm/host.py: Fix signature of Host.Run(), and implement it
	(using local_host.LocalHost.Run() code).
	* qm/test/classes/local_host.py: Remove now obsolete Run() method.
	* qm/test/classes/ssh_host.py: Derive from Host, not LocalHost.

2006-06-02  Stefan Seefeld  <stefan@codesourcery.com>

	* qm/extension.py: Raise AttributeError instead of AssertionError when
	wrong attributes are passed.
	* qm/common.py: Add parse_string_list function.
	* qm/test/context.py: Add Context.GetStringList method.
	* qm/test/classes/compiler.py: Add optional ldflags argument to
	Compiler constructor.
	* qm/test/classes/compiler_test.py: Fix _RemoveDirectory()
	* qm/test/classes/compilation_test.py: Add ExecutableTest.
	* qm/test/classes/classes.qmc: Adjust compilation_test name changes.

2006-03-07  Stefan Seefeld  <stefan@codesourcery.com>

	* qm/test/classes/compiler_table.py: Fix search for host
	extension to include database-specific path.

2005-12-02  Stefan Seefeld  <stefan@codesourcery.com>

	* qm/__init__.py: Define new extension_path variable.
	* qm/test/base.py: Use it to lookup QMTest extensions.
	* qm/dist/__init__.py: Provide build infrastructure to install 
	qmtest extensions.
	* qm/dist/distribution.py: Likewise.
	* qm/dist/command/__init__.py: Likewise.
	* qm/dist/command/build_extensions.py: Likewise.
	* qm/dist/command/install_extensions.py: Likewise.
	* setup.py: Install it.
	* qmdist/command/install_data.py: Likewise.

2005-12-01  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/cmdline.py (QMTest.__ExecuteSummarize): Print resource
	results for UNTESTED tests.
	