@@ -1,8 +1,12 @@
+2006-08-17  Mark Mitchell  <mark@codesourcery.com>
+
+	* qm/test/cmdline.py (QMTest.__ExecuteSummarize): Display resource
+	results too.
+
 2006-07-17  Stefan Seefeld  <stefan@codesourcery.com>
 
 	* qm/test/cmdline.py: Allow 'qmtest create' to create explicit suites,
 	and make their content visible through 'qmtest ls'.
-
 
 2006-06-21  Stefan Seefeld  <stefan@codesourcery.com>
 
